# VIBE

./: BackgroundSubtract.cpp  CMakeLists.txt  README.md  main.cpp
VIBE/: CMakeLists.txt
VIBE/include/: random_buffer.hpp  vibe.hpp
VIBE/src/: random_buffer.cpp  vibe.cpp
apps/: CMakeLists.txt
apps/simple_app/: CMakeLists.txt  main.cpp
unit_tests/: CMakeLists.txt  random_buffer.cpp
unit_tests/gtest/: gtest-all.cc  main.cpp
